# HapiDroidStreamPuller

./: local.properties  readme.md  settings.gradle
HapiAVEncoder/: build.gradle
HapiAVEncoder/src/main/cpp/: CMakeLists.txt  jinresample.cpp
HapiAVEncoder/src/main/cpp/common/: EncodeParam.h
HapiAVEncoder/src/main/cpp/resample/: AVResample.cpp  AVResample.h
HapiAVEncoder/src/main/cpp/util/: yuvutil.h
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_camera.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
hapiAVAnalyzer/src/main/: AndroidManifest.xml
hapiAVAnalyzer/src/main/cpp/: CMakeLists.txt  libai.cpp
hapiAVCapture/: build.gradle
hapiAVNDKFullPacker/src/main/: AndroidManifest.xml
hapiAVNDKFullPacker/src/main/cpp/: CMakeLists.txt  libstreaming.cpp
hapiAVNDKFullPacker/src/main/cpp/codec/: HWAudioEncoder.h  HWEncoder.h  HWVideoEncoder.h
hapiAVNDKFullPacker/src/main/cpp/common/: ADTSUitl.h  EncodeParam.h  OutputStreamContext.h
hapiAVNDKFullPacker/src/main/cpp/muxer/: Muxer.cpp  Muxer.h
hapiAVNDKFullPacker/src/main/cpp/output/mp4/: MP4OutputContext.h
hapiAVNDKFullPacker/src/main/cpp/output/rtmp/: RTMPOutputContext.cpp  RTMPOutputContext.h
hapiAVNDKFullPacker/src/main/cpp/output/srt/: Frame.h  SRTOutputContext.cpp  SRTOutputContext.h  TSMuxer.h
hapiAVNDKFullPacker/src/main/cpp/util/: LogUtil.h  yuvutil.h
hapiAVPackerClinet/: build.gradle
hapiAVRender/src/main/cpp/: hapiplay.cpp
hapiAVRender/src/main/cpp/common/: NativeImage.h
hapiAVRender/src/main/cpp/render/: VideoGLRender.cpp
hapiAVRender/src/main/cpp/util/: LogUtil.h
hapiMp4Muxer/: build.gradle
hapiRTMPMuxer/: build.gradle
hapiRTMPMuxer/src/main/cpp/: CMakeLists.txt  rtmpmuxer.cpp
hapiRTMPMuxer/src/main/cpp/common/: AVFrame.h  IConnection.cpp  IConnection.h  JVMCallBack.cpp  ThreadSafeQueue.h
hapiRTMPMuxer/src/main/cpp/jni/: JNIRTMPConnection.h
hapiSRTMuxer/: build.gradle
hapiSRTMuxer/src/main/cpp/: CMakeLists.txt  srtmuxer.cpp
libbeauty/src/main/: AndroidManifest.xml
libbeauty/src/main/cpp/: CMakeLists.txt  libbeauty.cpp
librtcclient/src/main/: AndroidManifest.xml
librtcclient/src/main/cpp/: CMakeLists.txt
librtcclient/src/main/cpp/util/: A.h  (+4 more)
(+78 files in other folders)
